tests/invalid/Old_Invalid_6.whiley
method m(&int p)
ensures old(x >= 0):
    //
    skip